src/changelog/snapshots/changesette__changelog__document__tests__extracts_an_explicit_version.snap
---
source: src/changelog/document.rs
expression: "extract(\"basic\", Some(\"1.0.0\")).unwrap()"
---
### Minor Changes

- Add something
