src/changelog/snapshots/changesette__changelog__document__tests__extracts_the_latest_section.snap
---
source: src/changelog/document.rs
expression: "extract(\"basic\", None).unwrap()"
---
### Major Changes

- Break something
