src/changelog/snapshots/changesette__changelog__document__tests__generates_a_new_file_from_empty_text.snap
---
source: src/changelog/document.rs
expression: "upsert(\"empty\", \"1.0.0\")"
---
# ublacklist

## 1.0.0

### Minor Changes

- [#42](https://github.com/iorate/ublacklist/pull/42) - Add SERPINFO satellites support
