src/changelog/snapshots/changesette__changelog__document__tests__ignores_an_h2_inside_a_list_item.snap
---
source: src/changelog/document.rs
expression: "upsert(\"h2-inside-list-item\", \"1.0.0\")"
---
# ublacklist

## 1.0.0

### Minor Changes

- [#42](https://github.com/iorate/ublacklist/pull/42) - Add SERPINFO satellites support

## 0.9.0

### Patch Changes

- Fix something
