src/changelog/snapshots/changesette__changelog__document__tests__rejects_a_changelog_without_sections.snap
---
source: src/changelog/document.rs
expression: "format!(\"{:#}\", extract(\"no-h2\", None).unwrap_err())"
---
no version sections found in CHANGELOG.md
