src/changelog/snapshots/changesette__changelog__document__tests__rejects_a_version_not_found.snap
---
source: src/changelog/document.rs
expression: "format!(\"{:#}\", extract(\"basic\", Some(\"3.0.0\")).unwrap_err())"
---
version 3.0.0 not found in CHANGELOG.md
