src/changelog/snapshots/changesette__changelog__document__tests__replaces_an_existing_section_of_the_same_version.snap
---
source: src/changelog/document.rs
expression: "upsert(\"same-version-exists\", \"1.0.0\")"
---
# ublacklist

## 1.0.0

### Minor Changes

- [#42](https://github.com/iorate/ublacklist/pull/42) - Add SERPINFO satellites support

## 0.9.0

### Patch Changes

- Fix something
